#######################################
# Changelog of the check_hpasm plugin #
#######################################

4.4 2011-12-16
- add checks for power converters
- add checks for nic teaming
- fix a bug with invalid date/time from iml
- fix a bug in blade enclosure manager verbose output

4.3 2011-10-14
- add monitoring of IML events (Thanks Klaus)
  esp. Memory initialization error... The OS may not have access to all of the memory installed in the system 

4.2.5
- G2 series of X1660 storage systems are now correctly detected. (Thanks Andre Zaborowski)
- blacklisting for SAS controller & disks was added (Thanks Jewi)

4.2.4.1 2011-08-09
- dimm output of G7 hpasmcli (under Solaris) is now handled (Thanks Ron Waffle)

4.2.4 2011-07-21
add a check for asr (Thanks Ingmar Verheij http://www.ingmarverheij.com/)

4.2.3 2011-07-21
- add a global temperature check when no temperature sensors are found
- check power converters if no fault tolerant power supplies are found

4.2.2.1 2011-04-17
- fix a bug when a wrong --hostname was used (Thanks Wim Savenberg)

4.2.2 2011-01-21
- add support for msa500 and hpasmcli (Thanks Kalle Andersson)

4.2.1.1
- added support for x1** nas storage, which was detected as storage but in fact is like a proliant (Thanks Maik Schulz)

4.2.1
- added timeout handling
- better hpacucli da controller handling
- fix a bug in memory detection (0 dimms were shown) (Thanks Anthony Cano)
- better handling for failed and disabled controller batteries. warning only.

4.2 2010-03-20
- added temperatures for bladesystems (although not implemented by HP)
- added fuses for bladesystems
- added enclosure managers for bladesystems
- added blacklisting for scsi devices (scco,scld,scpd) (Thanks Marco Hill)
- added blacklisting for overall fan status (ofs) (Thanks Thomas Jampen)

4.1.2.1 2010-03-03
- fixed a harmless bug in BladeCenter::Powersupply output

4.1.2 2010-02-09