@@ -1,0 +1,5 @@
+package HP::FCMGMT::Component;
+our @ISA = qw(HP::FCMGMT);
+
+1;
+
